Software/Nucleo/F767/Eirbot2018.log
  
  
  [05/02/18 20:34:43] Processing nucleo_f767zi (platform: ststm32; board: nucleo_f767zi; framework: mbed; build_flags: -DPIO_FRAMEWORK_MBED_RTOS_PRESENT -DMAIN_BOT -DF767ZI)
  
  PLATFORM: ST STM32 > ST Nucleo F767ZI
  SYSTEM: STM32F767ZIT6 216MHz 512KB RAM (2MB Flash)
  DEBUG: CURRENT(stlink-v2-1) ON-BOARD(stlink-v2-1) EXTERNAL(blackmagic)
  Library Dependency Finder -> http://bit.ly/configure-pio-ldf
  LDF MODES: FINDER(chain) COMPATIBILITY(light)
  Collected 20 compatible libraries
  Scanning dependencies...
  Dependency Graph
  |-- <VL53L0X> (C:\Users\Biscuit\Google Drive\ENSEIRB\EIRBOT\COUPE 2018\Software\Nucleo\lib\VL53L0X)
  |-- <mbed-rtos> (C:\SPB_Data\.platformio\packages\framework-mbed\rtos)
  arm-none-eabi-g++ -o .pioenvs\nucleo_f767zi\lib4ae\VL53L0X\Adafruit_VL53L0X_NUCLEO.o -c -std=gnu++98 -fno-rtti -Wvla -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=softfp -c -Wall -Wextra -Wno-unused-parameter -Wno-missing-field-initializers -fmessage-length=0 -fno-exceptions -fno-builtin -ffunction-sections -fdata-sections -funsigned-char -MMD -fno-delete-null-pointer-checks -fomit-frame-pointer -Os -DNDEBUG -include mbed_config.h -DFEATURE_LWIP=1 -D__MBED__=1 -DDEVICE_I2CSLAVE=1 -D__FPU_PRESENT=1 -DDEVICE_PORTOUT=1 -DTARGET_STM32F767ZI -DDEVICE_PORTINOUT=1 -DTARGET_RTOS_M4_M7 -DDEVICE_LOWPOWERTIMER=1 -DTARGET_STM32F7 -DTOOLCHAIN_object -DDEVICE_SERIAL_ASYNCH=1 -D__CMSIS_RTOS -DMBED_BUILD_TIMESTAMP=1514051492.57 -DTOOLCHAIN_GCC -DDEVICE_CAN=1 -DARM_MATH_CM7 -DTARGET_CORTEX_M -DTARGET_LIKE_CORTEX_M7 -DDEVICE_RTC=1 -DDEVICE_ANALOGOUT=1 -DTARGET_NUCLEO_F767ZI -DTARGET_UVISOR_UNSUPPORTED -DTARGET_M7 -DDEVICE_SPI_ASYNCH=1 -DDEVICE_SERIAL=1 -DDEVICE_INTERRUPTIN=1 -DTARGET_CORTEX -DDEVICE_I2C=1 -DTRANSACTION_QUEUE_SIZE_SPI=2 -DDEVICE_STDIO_MESSAGES=1 -D__CORTEX_M7 -DDEVICE_PWMOUT=1 -DTARGET_FAMILY_STM32 -DTARGET_FF_ARDUINO -DDEVICE_PORTIN=1 -DTARGET_STM32F767 -DTARGET_STM -DUSBHOST_OTHER -DTARGET_RELEASE -DDEVICE_TRNG=1 -DTARGET_LIKE_MBED -D__MBED_CMSIS_RTOS_CM -DDEVICE_SLEEP=1 -DTOOLCHAIN_GCC_ARM -DDEVICE_SPI=1 -DDEVICE_SPISLAVE=1 -DDEVICE_ANALOGIN=1 -DTARGET_STM32F767xI -DDEVICE_FLASH=1 -DDEVICE_I2C_ASYNCH=1 -DSTM32F767xx -DPIO_FRAMEWORK_MBED_RTOS_PRESENT -DMAIN_BOT -DF767ZI -DMBED_CONF_RTOS_PRESENT -DPLATFORMIO=30502 -IC:\SPB_Data\.platformio\packages\framework-mbed -IC:\SPB_Data\.platformio\packages\framework-mbed\cmsis -IC:\SPB_Data\.platformio\packages\framework-mbed\cmsis\TARGET_CORTEX_M -IC:\SPB_Data\.platformio\packages\framework-mbed\drivers -IC:\SPB_Data\.platformio\packages\framework-mbed\hal -IC:\SPB_Data\.platformio\packages\framework-mbed\hal\storage_abstraction -IC:\SPB_Data\.platformio\packages\framework-mbed\platform -IC:\SPB_Data\.platformio\packages\framework-mbed\targets -IC:\SPB_Data\.platformio\packages\framework-mbed\targets\TARGET_STM -IC:\SPB_Data\.platformio\packages\framework-mbed\targets\TARGET_STM\TARGET_STM32F7 -IC:\SPB_Data\.platformio\packages\framework-mbed\targets\TARGET_STM\TARGET_STM32F7\device -IC:\SPB_Data\.platformio\packages\framework-mbed\targets\TARGET_STM\TARGET_STM32F7\TARGET_STM32F767xI -IC:\SPB_Data\.platformio\packages\framework-mbed\targets\TARGET_STM\TARGET_STM32F7\TARGET_STM32F767xI\device -IC:\SPB_Data\.platformio\packages\framework-mbed\targets\TARGET_STM\TARGET_STM32F7\TARGET_STM32F767xI\device\TOOLCHAIN_GCC_ARM -IC:\SPB_Data\.platformio\packages\framework-mbed\targets\TARGET_STM\TARGET_STM32F7\TARGET_STM32F767xI\TARGET_NUCLEO_F767ZI -IC:\SPB_Data\.platformio\packages\framework-mbed -IC:\SPB_Data\.platformio\packages\framework-mbed\platformio\variants\NUCLEO_F767ZI -IC:\SPB_Data\.platformio\packages\framework-mbed\rtos -IC:\SPB_Data\.platformio\packages\framework-mbed\rtos\TARGET_CORTEX -IC:\SPB_Data\.platformio\packages\framework-mbed\rtos\TARGET_CORTEX\rtx4 -IC:\SPB_Data\.platformio\packages\framework-mbed\rtos\TARGET_CORTEX\rtx5 -IC:\SPB_Data\.platformio\packages\framework-mbed\rtos\TARGET_CORTEX\rtx5\Include -IC:\SPB_Data\.platformio\packages\framework-mbed\rtos\TARGET_CORTEX\rtx5\RTX -IC:\SPB_Data\.platformio\packages\framework-mbed\rtos\TARGET_CORTEX\rtx5\RTX\Config -IC:\SPB_Data\.platformio\packages\framework-mbed\rtos\TARGET_CORTEX\rtx5\RTX\Include -IC:\SPB_Data\.platformio\packages\framework-mbed\rtos\TARGET_CORTEX\rtx5\RTX\Source -IC:\SPB_Data\.platformio\packages\framework-mbed\rtos\TARGET_CORTEX\rtx5\RTX\Source\TOOLCHAIN_GCC -IC:\SPB_Data\.platformio\packages\framework-mbed\rtos\TARGET_CORTEX\rtx5\RTX\Source\TOOLCHAIN_GCC\TARGET_RTOS_M4_M7 -IC:\SPB_Data\.platformio\packages\framework-mbed\rtos\TARGET_CORTEX\rtx5\Source -Ilib\VL53L0X -Ilib\VL53L0X\core -Ilib\VL53L0X\core\src -Ilib\VL53L0X\platform -Ilib\VL53L0X\platform\src lib\VL53L0X\Adafruit_VL53L0X_Nucleo.cpp
  In file included from lib\VL53L0X\vl53l0x_api_strings.h:32:0,
  from lib\VL53L0X\vl53l0x_api.h:32,
  from lib\VL53L0X\Adafruit_VL53L0X_NUCLEO.h:23,
  from lib\VL53L0X\Adafruit_VL53L0X_Nucleo.cpp:32:
  lib\VL53L0X\vl53l0x_def.h:133:47: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11
  #define VL53L0X_ERROR_NONE  ((VL53L0X_Error) 0)
  ^
  lib\VL53L0X\Adafruit_VL53L0X_NUCLEO.h:54:53: note: in expansion of macro 'VL53L0X_ERROR_NONE'
  VL53L0X_Error                     Status      = VL53L0X_ERROR_NONE; ///< indicates whether or not the sensor has encountered an error
  ^~~~~~~~~~~~~~~~~~
  In file included from lib\VL53L0X\Adafruit_VL53L0X_Nucleo.cpp:32:0:
  lib\VL53L0X\Adafruit_VL53L0X_NUCLEO.h:59:54: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11
  VL53L0X_Dev_t                       *pMyDevice  = &MyDevice;
  ^~~~~~~~
  lib\VL53L0X\Adafruit_VL53L0X_NUCLEO.h:61:54: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11
  VL53L0X_Version_t                   *pVersion   = &Version;
  ^~~~~~~
  lib\VL53L0X\Adafruit_VL53L0X_Nucleo.cpp: In member function 'bool Adafruit_VL53L0X::begin(uint8_t, bool, mbed::Serial*)':
  lib\VL53L0X\Adafruit_VL53L0X_Nucleo.cpp:51:13: warning: unused variable 'status_int' [-Wunused-variable]
  int32_t   status_int;
  ^~~~~~~~~~
  lib\VL53L0X\Adafruit_VL53L0X_Nucleo.cpp:52:13: warning: unused variable 'init_done' [-Wunused-variable]
  int32_t   init_done         = 0;
  ^~~~~~~~~
  lib\VL53L0X\Adafruit_VL53L0X_Nucleo.cpp: In member function 'VL53L0X_Error Adafruit_VL53L0X::getSingleRangingMeasurement(VL53L0X_RangingMeasurementData_t*, bool)':
  lib\VL53L0X\Adafruit_VL53L0X_Nucleo.cpp:185:21: warning: unused variable 'LimitCheckCurrent' [-Wunused-variable]
  FixPoint1616_t  LimitCheckCurrent;
  ^~~~~~~~~~~~~~~~~
  arm-none-eabi-ar rc .pioenvs\nucleo_f767zi\lib4ae\libVL53L0X.a .pioenvs\nucleo_f767zi\lib4ae\VL53L0X\Adafruit_VL53L0X_NUCLEO.o .pioenvs\nucleo_f767zi\lib4ae\VL53L0X\core\src\vl53l0x_api.o .pioenvs\nucleo_f767zi\lib4ae\VL53L0X\core\src\vl53l0x_api_calibration.o .pioenvs\nucleo_f767zi\lib4ae\VL53L0X\core\src\vl53l0x_api_core.o .pioenvs\nucleo_f767zi\lib4ae\VL53L0X\core\src\vl53l0x_api_ranging.o .pioenvs\nucleo_f767zi\lib4ae\VL53L0X\core\src\vl53l0x_api_strings.o .pioenvs\nucleo_f767zi\lib4ae\VL53L0X\platform\src\vl53l0x_i2c_comms.o .pioenvs\nucleo_f767zi\lib4ae\VL53L0X\platform\src\vl53l0x_platform.o
  arm-none-eabi-g++ -o .pioenvs\nucleo_f767zi\firmware.elf -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=softfp -Wl,--gc-sections -Wl,--wrap,main -Wl,--wrap,_malloc_r -Wl,--wrap,_free_r -Wl,--wrap,_realloc_r -Wl,--wrap,_memalign_r -Wl,--wrap,_calloc_r -Wl,--wrap,exit -Wl,--wrap,atexit -Wl,-n -Wl,-T".pioenvs\nucleo_f767zi\STM32F767xI.ld.link_script.ld" @"C:\Users\Biscuit\Google Drive\ENSEIRB\EIRBOT\COUPE 2018\Software\Nucleo\.pioenvs\nucleo_f767zi\longcmd-cea99e6becbad7eca987fef9bcf224aa" -LC:\SPB_Data\.platformio\platforms\ststm32\ldscripts -L.pioenvs\nucleo_f767zi -Wl,--start-group .pioenvs\nucleo_f767zi\lib4ae\libVL53L0X.a -lstdc++ -lsupc++ -lm -lc -lgcc -lnosys -lc -lstdc++ -Wl,--end-group
  Checking program size
  text	   data	    bss	    dec	    hex	filename
  93440	   3384	   7932	 104756	  19934	.pioenvs\nucleo_f767zi\firmware.elf
  arm-none-eabi-objcopy -O binary .pioenvs\nucleo_f767zi\firmware.elf .pioenvs\nucleo_f767zi\firmware.bin
  Configuring upload protocol...
  MethodWrapper(["upload"], [".pioenvs\nucleo_f767zi\firmware.bin"])
  Use manually specified: E:/
  MethodWrapper(["upload"], [".pioenvs\nucleo_f767zi\firmware.bin"])
  *** [upload] E:/firmware.bin: No such file or directory
   [ERROR] Took 7.09 seconds 
  
  
   [SUMMARY] 
  Environment nucleo_f429zi	[SKIP]
  Environment nucleo_f446re	[SKIP]
  Environment nucleo_f767zi	[ERROR]
   [ERROR] Took 7.09 seconds 
C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V140\Microsoft.MakeFile.Targets(41,5): error MSB3073: The command "platformio -f -c visualstudio run -e nucleo_f767zi -v --target upload --upload-port E:/" exited with code 1.
